--- a/table.css
+++ b/table.css
@@ -20,7 +20,7 @@ body{
 }
 h1{
   color: #F8F8F8;
-  font-weight: 500;
+  font-weight: 600;
   padding-bottom: 2%;
 }
 #multForm{
@@ -61,7 +61,7 @@ td:nth-child(1){
   font-weight: bold;
   color: #E8E8E8;
 }
-label.error{
+label.error{  /*.error class styles determine error messages and highights that apeear*/
   color: red;
   font-size: 90%;
   padding-top: 2%;
